deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - name: go-app
          image: akshaykeswani/go-k8s-demo:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          # 🟡 Readiness Probe (control traffic)
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5

          # 🟢 Startup Probe (for slow start safety)
          startupProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 10
            periodSeconds: 5

          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-svc
spec:
  type: NodePort
  selector:
    app: go-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007   # optional (fixed port for easier access)
